--- a/home.css
+++ b/home.css
@@ -2,6 +2,11 @@
    display: flex;
    flex-direction: column;
    width: 82%;
+   padding-top: 50px;
+}
+body{
+    display: flex;
+    justify-content: center;
 }
 
 .headerContainer{
@@ -129,4 +134,6 @@ a{
     opacity: 1;
   }
 
+  
+ 
   
